--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,6 @@
 @import "./helpers/variables";
 @import "./helpers/placeholders";
 @import "./helpers/mixins";
-@import "./helpers/media-queries";
 
 // Universal styles
 *, 
@@ -21,7 +20,11 @@ body {
 }
 
 html {
-    @extend %fluid-typography;
+    font-size: 0.875rem;
+    font-size: clamp(0.875rem, 0.7678571428571428rem + 0.5357142857142857vw, 1.25rem);
+    @supports not (font-size: clamp(0.875rem, 0.7678571428571428rem + 0.5357142857142857vw, 1.25rem)) {
+        font-size: min(max(0.875rem, 0.7678571428571428rem + 0.5357142857142857vw), 1.25rem);
+    }
     width: 100vw;
     min-height: 97.52vh;
 }
@@ -32,7 +35,6 @@ body {
         size: inherit;
         weight: 300;
     }
-    padding: 0 $space-6;
     line-height: $body-line-height;
 }
 
@@ -89,21 +91,12 @@ h6,
 
 p {
     margin-bottom: $size-6;
+    padding: 0 $space-6;
 }
 
 small,
 .text-xsmall {
     font-size: $size-7;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-[class*='column'] {
-    flex-basis: 100%;
-    padding: $size-7;
 }
 
 button, .button {
@@ -114,9 +107,13 @@ button, .button {
     background-color: $grey;
     border: none;
     border-radius: $size-7;
-    padding: $space-7 $space-3;
+    min-width: calc($space-1 * 3);
+    height: $space-1;
+    padding: $space-7;
     margin: $space-7 $space-8;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     transition-duration: 0.4s;
 
     &:hover {
