--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -1,5 +1,22 @@
+@import "../../sass/helpers/mixins";
+@import "../../sass/helpers/variables";
+@import "../../sass/helpers/layout";
+
 .Homepage {
+    margin-top: calc($size-1 * 1.5);
+    overflow: auto;
+
     h1, p {
         text-align: center;
+        padding: 0 $space-3;
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: center;
+    }
+
+    .blue {
+        @include button-style($white, $blue);
     }
 }
