Remove background and fix navbar to the top

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,7 +1,14 @@
+@import "../../sass/index.scss";
+
 .Login {
     min-height: 97.52vh;
     overflow: auto;
-
+    nav  {
+        .button {
+            color: $black;
+            margin: 0;
+        }
+    }
     h2 {
         text-align: center;
     }
