--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -6,11 +6,18 @@
         display: flex;
         justify-content: space-between;
         padding: 0 $space-1;
+
         a {
             font-weight: 500;
             text-decoration: none;
+            padding: $space-8;
+
             &:link, &:visited {
                 color: $blue;
+            }
+
+            &:hover {
+                border-bottom: 0.2rem solid $blue;
             }
         }
     }
