--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -11,7 +11,7 @@
             font-weight: 500;
             text-decoration: none;
             padding: $space-8;
-
+            transition-duration: .4s;
             &:link, &:visited {
                 color: $blue;
             }
