Import index.scss

--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,7 +1,8 @@
+@import "../../sass/index.scss";
+
 .Signup {
     min-height: 97.52vh;
     overflow: auto;
-    
     h2 {
         text-align: center;
     }
