--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Open+Sans:wght@300;500&family=Playfair+Display:wght@500&display=swap');
 @import "./helpers/variables";
 @import "./helpers/mixins";
+@import "./helpers/placeholders";
 
 // Universal styles
 *, 
