Extends container placeholder

--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,8 +1,8 @@
 @import "../../sass/index.scss";
 
 .Signup {
-    min-height: 97.52vh;
-    overflow: auto;
+    @extend %container;
+    padding-top: $space-2;
     h2 {
         text-align: center;
     }
