--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -7,3 +7,12 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .Signup {
+        margin-top: $space-6;
+        h2 {
+            padding: 0 $space-6;
+        }
+    }
+}
