Adjust SignupForm and form container width and margin on mobile size

--- a/src/components/SignupForm/SignupForm.scss
+++ b/src/components/SignupForm/SignupForm.scss
@@ -15,3 +15,14 @@
 	}
 
 }
+
+@media screen and (max-width: 800px) {
+	.SignupForm {
+		margin-top: $space-5;
+
+		form {
+			width: 90%;
+		}
+	}
+
+}
