Set margin left and right for signup and login buttons

--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -19,4 +19,9 @@
     .blue {
         @include button-style($white, $blue);
     }
+
+    a.button {
+        margin-left: $space-7;
+        margin-right: $space-7;
+    }
 }
