--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,27 +1,31 @@
 @import "../../sass/index.scss";
 
 .NavBar {
-    padding: $space-6 $space-1;
-    nav {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 $space-1;
+  padding: $space-6 $space-1;
 
-        a {
-            font-weight: 500;
-            text-decoration: none;
-            padding: $space-8;
-            transition-duration: .4s;
-            &:link, &:visited {
-                color: $blue;
-            }
+  nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 $space-1;
 
-            &:hover {
-                border-bottom: 0.2rem solid $blue;
-            }
-        }
+    a {
+      font-weight: 500;
+      text-decoration: none;
+      padding: $space-8;
+      transition-duration: .4s;
+
+      &:link,
+      &:visited {
+        color: $blue;
+      }
+
+      &:hover {
+        border-bottom: 0.2rem solid $blue;
+      }
     }
-    position: absolute;
-    top: 0;
-    width: 100%;
+  }
+
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
