Change navlinks visited and hover state color

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -16,11 +16,11 @@
 
       &:link,
       &:visited {
-        color: $blue;
+        color: $black;
       }
 
       &:hover {
-        border-bottom: 0.2rem solid $blue;
+        border-bottom: 0.2rem solid $grey;
       }
     }
   }
