--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,7 +1,7 @@
 @import "../../sass/index.scss";
 
 .NavBar {
-  padding: $space-1;
+  padding: $space-1 $space-3;
   position: fixed;
   top: 0;
   width: 100%;
@@ -10,11 +10,12 @@
     display: flex;
     justify-content: space-between;
     padding: 0 $space-1;
+    border-bottom: .2rem solid $grey;
 
     a {
       font-weight: 500;
       text-decoration: none;
-      padding: $space-8;
+      padding: $space-4 $space-7;
       transition-duration: .4s;
 
       &:link,
@@ -23,14 +24,12 @@
       }
 
       &:hover {
-        border-bottom: 0.2rem solid $grey;
+        font-weight: 600;
       }
     }
   }
 
   @media screen and (max-width: 800px) {
-    padding: $space-5 $space-4;
-
     nav {
       padding: 0;
     }
