--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -2,6 +2,10 @@
 
 .Signup {
     @extend %container;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: $space-2;
     h2 {
         text-align: center;
@@ -10,7 +14,6 @@
 
 @media screen and (max-width: 800px) {
     .Signup {
-        margin-top: $space-2;
         h2 {
             padding: 0 $space-6;
         }
