Add padding and color to submit input

--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -4,4 +4,12 @@
   padding: 0 $space-6;
   margin-top: $space-4;
   width: 35%;
+
+  form {
+    padding: $space-6;
+
+    .green {
+      @include button-style($white, $green);
+    }
+  }
 }
