--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -2,7 +2,12 @@
 
 .Login {
   @extend %container;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: $space-2;
+
 
   // overflow: auto;
   nav {
