Add notification placeholder to style notification classNames

--- a/src/sass/helpers/_placeholders.scss
+++ b/src/sass/helpers/_placeholders.scss
@@ -7,3 +7,22 @@
     font-size: $space-7;
     color: red;
 }
+
+%notification {
+  color: $black;
+  padding: $space-6;
+  border-radius: calc($size-8 / 2);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: $space-6;
+  transition-duration: 1s;
+
+  span {
+    font-weight: 500;
+    cursor: pointer;
+
+    &:hover {
+      font-weight: 700;
+    }
+  }
+}
