Add light red color variable

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -30,6 +30,7 @@ $space-8: $size-8;
 // Colors
 $green: #4CAF50;
 $light-green: #b6dab7;
+$light-red: #FF9494;
 $blue: #008CBA;
 $grey: #e7e7e7;
 $white: #ffffff;
