--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -33,3 +33,13 @@
     width: 100%;
   }
 }
+
+@media  screen and (max-width: 800px) {
+    .Homepage {
+      top: 15vh;
+    }
+
+    .Footer {
+      top: 65vh;
+    }
+}
