--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -135,7 +135,7 @@ select {
 	width: 100%;
 	height: 2.5rem;
 	padding: 0 $space-6 0 $space-7  !important;
-	margin: $space-8 0;
+	margin: calc($space-8 / 1.5) 0;
 	border: .15rem solid $grey;
 	border-radius: calc($space-7 / 3);
 
