--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -13,19 +13,23 @@
     justify-content: space-between;
     padding: 0 $space-1;
 
-    a {
-      font-weight: 500;
-      text-decoration: none;
+    li {
+      list-style: none;
       padding: $space-4 $space-7;
-      transition-duration: .4s;
 
-      &:link,
-      &:visited {
-        color: $black;
-      }
-
-      &:hover {
-        font-weight: 600;
+      a {
+        font-weight: 500;
+        text-decoration: none;
+        transition-duration: .4s;
+        
+        &:link,
+        &:visited {
+          color: $black;
+        }
+  
+        &:hover {
+          font-weight: 600;
+        }
       }
     }
   }
