--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -2,5 +2,14 @@
 
 .Dashboard {
   @extend %container;
-   
+    .NavBar {
+        nav {
+          li {
+            padding: 0;
+          }
+          button {
+            margin: 0;
+          }
+        }
+      }
 }
