--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -2,14 +2,16 @@
 
 .Dashboard {
   @extend %container;
-    .NavBar {
-        nav {
-          li {
-            padding: 0;
-          }
-          button {
-            margin: 0;
-          }
-        }
-      }
+  nav {
+    li {
+      padding: 0;
+    }
+    p {
+      font-weight: 600;
+      padding: 0;
+    }
+    button {
+      margin: 0;
+    }
+  }
 }
