--- a/src/components/Dashboard/DashboardForm.scss
+++ b/src/components/Dashboard/DashboardForm.scss
@@ -1,5 +1,12 @@
 @import "../../sass/index.scss";
 
 .DashboardForm  {
-    @extend %container;
+   display: flex;
+   justify-content: center;
+   padding: 0 $space-1;
+    div {
+      flex-basis: 50%;
+      padding: 0 $space-8;
+      margin: auto;
+    }
 }
