--- a/src/components/Dashboard/DashboardForm.scss
+++ b/src/components/Dashboard/DashboardForm.scss
@@ -5,8 +5,15 @@
    justify-content: center;
    padding: 0 $space-1;
     div {
-      flex-basis: 50%;
+      flex-basis: 100%;
       padding: 0 $space-8;
       margin: auto;
+    }
+    button {
+      margin: 0;
+      padding: 0;
+      height: $space-2;
+      width: 100%;
+      @include button-style($white, $green);
     }
 }
