--- a/src/components/Dashboard/DashboardResults/DashboardResults.scss
+++ b/src/components/Dashboard/DashboardResults/DashboardResults.scss
@@ -1,1 +1,7 @@
 @import "../../../sass/index.scss";
+
+.DashboardResults {
+    height: 75vh;
+    margin-top: $space-6;
+    padding: 0 $space-1;
+}
