Add grey border around holiday list container

--- a/src/components/Dashboard/DashboardResults/DashboardResults.scss
+++ b/src/components/Dashboard/DashboardResults/DashboardResults.scss
@@ -4,10 +4,11 @@
   height: 75vh;
   margin-top: $space-6;
   padding: 0 $space-1;
-
+  
   .HolidaysList {
     background-color: $grey;
     height: 75vh;
     overflow-y: scroll;
+    border: .1rem solid $grey;
   }
 }
